changelog

expiredOn -> expiresOn