@@ -1,6 +1,7 @@
 {
   "id": "SERIAL-2018-08-01-112",
   "$template": "BLOCKCHAIN-ACADEMY-2018-001",
+  "description": "This masters is awarded to developers who can blockchain",
   "issuedOn": "2018-08-01T00:00:00+08:00",
   "expiresOn": "2118-08-01T00:00:00+08:00",
   "name": "Master of Blockchain",
@@ -12,7 +13,8 @@
       "did": "DID:SG-UEN:U18274928E",
       "url": "https://blockchainacademy.com",
       "email": "registrar@blockchainacademy.com",
-      "certificateStore": "0xd9580260be45c3c0c2fb259a82f219b513054012"
+      "certificateStore": "0xd9580260be45c3c0c2fb259a82f219b513054012",
+      "additionalProp": "0x0000000000000000000000000000000000000000000000000000000000000000"
     }, 
     {
       "name": "School of Crypto-economics",
@@ -24,7 +26,8 @@
     "name": "Mr Blockchain",
     "did": "DID:SG-NRIC:S99999999A",
     "email": "mr-blockchain@gmail.com",
-    "phone": "+65 88888888"
+    "phone": "+65 88888888",
+    "additionalProp": "0x0000000000000000000000000000000000000000000000000000000000000000"
   },
   "transcript": [
     {
